# porg

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  README  TODO  config-bot.h.in  configure.ac
.github/workflows/: build.yml  codeql-analysis.yml
doc/: Makefile.am  faq.txt  grop.desktop  index.html  porg.8.in  porg.pc.in  porgball.8.in  porgrc.5.in  porgrc.in  rpm2porg.8.in  superporg.8.in
grop/: Makefile.am  db.cc  db.h  filestreeview.cc  filestreeview.h  find.cc  find.h  infotextview.cc  infotextview.h  main.cc  maintreeview.cc  maintreeview.h  mainwindow.cc  mainwindow.h  opt.cc  opt.h  pkg.cc  pkg.h  porgball.cc  porgball.h  preferences.cc  preferences.h  properties.cc  properties.h  removepkg.cc  removepkg.h  util.cc  util.h
lib/porg/: Makefile.am  baseopt.cc  baseopt.h  basepkg.cc  basepkg.h  common.cc  common.h  file.cc  file.h  porgrc.cc  porgrc.h  regexp.h  rexp.cc  rexp.h
lib/porg-log/: log.c
porg/: Makefile.am  db.cc  db.h  dir.cc  dir.h  getopt.cc  getopt.h  global.cc  global.h  info.cc  info.h  log.cc  log.h  logger.cc  logger.h  main.cc  main.h  newpkg.cc  newpkg.h  opt.cc  opt.h  out.cc  out.h  pkg.cc  pkg.h  pkgset.cc  pkgset.h  regexp.cc  regexp.h  util.cc  util.h
scripts/: Makefile.am  paco2porg  paco2porg.in  porg_bash_completion  porgball  porgball.in  rpm2porg  superporg
